--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -58,7 +58,7 @@ systema.tvinn.sad.import.notisblock.createnew.tab=Notisblokk
 #---------------------------------
 systema.tvinn.sad.import.item.created.mastertopic.tab=Tolldekl. 
 systema.tvinn.sad.import.item.createnew.tab=Varelinjer
-systema.tvinn.sad.import.item.createnew.submit=Lagre varelinje
+systema.tvinn.sad.import.item.createnew.submit=Lagre
 systema.tvinn.sad.import.item.line.init.createnew.submit=Lage ny
 #-------------------------------------
 #TVINN-SAD Import Visa Loggning (Historik)
@@ -260,7 +260,7 @@ systema.tvinn.sad.export.notisblock.createnew.tab=Notisblokk
 #--------------------------------------
 systema.tvinn.sad.export.item.created.mastertopic.tab=Oppdrag
 systema.tvinn.sad.export.item.createnew.tab=Varelinjer
-systema.tvinn.sad.export.item.createnew.submit=Lagre varepost
+systema.tvinn.sad.export.item.createnew.submit=Lagre
 systema.tvinn.sad.export.item.line.init.createnew.submit=Lage ny
 #-----------------------------------------
 #TVINN-SAD Export Visa Loggning (Historik)
@@ -449,7 +449,7 @@ systema.tvinn.sad.ncts.export.created.mastertopic.tab=Oppdrag
 #-------------------------------------------
 systema.tvinn.sad.ncts.export.item.created.mastertopic.tab=Oppdrag 
 systema.tvinn.sad.ncts.export.item.createnew.tab=Varelinjer
-systema.tvinn.sad.ncts.export.item.createnew.submit=Lagre varelinje
+systema.tvinn.sad.ncts.export.item.createnew.submit=Lagre
 
 
 #-------------------------------------
