--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -195,6 +195,7 @@ systema.tvinn.sad.import.header.error.null.siktc=48.Kontonr.Tollkredit er obliga
 #------------------------------------
 systema.tvinn.sad.import.header.error.rule.tollkreditOrDagsopp=Dagsopp./Kontanter skal ikke utfyldes hvis 48.Kontonr.Tollkredit eksisterer.
 systema.tvinn.sad.import.header.error.rule.invalidFrakt=Tastet 12.Verdiopplysninger-Beløp tollb.frakt: er ugyldig i henhold til leveringsbetingelse 20.1 Leveringksvilkår kode.
+systema.tvinn.sad.import.header.error.rule.invalidDeklGodkantDate=Dekl.godkj.dato 
 systema.tvinn.sad.import.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
 
 #systema.tvinn.sad.import.header.error.rule.onlyOneDate=Kun en dato (Forventet eller Faktisk) skal utfyldes
