--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -196,7 +196,9 @@ systema.tvinn.sad.import.header.error.null.siktc=48.Kontonr.Tollkredit er obliga
 systema.tvinn.sad.import.header.error.rule.tollkreditOrDagsopp=Dagsopp./Kontanter skal ikke utfyldes hvis 48.Kontonr.Tollkredit eksisterer.
 systema.tvinn.sad.import.header.error.rule.invalidFrakt=Tastet 12.Verdiopplysninger-Beløp tollb.frakt: er ugyldig i henhold til leveringsbetingelse 20.1 Leveringksvilkår kode.
 systema.tvinn.sad.import.header.error.rule.invalidDeklGodkantDate=Dekl.godkj.dato 
-systema.tvinn.sad.import.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
+systema.tvinn.sad.import.header.error.rule.invalidFaktDate=28.Fakt.dato er feil
+systema.tvinn.sad.import.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil for den valgte Dekl.type (EU eller IM)
+
 
 #systema.tvinn.sad.import.header.error.rule.onlyOneDate=Kun en dato (Forventet eller Faktisk) skal utfyldes
 #systema.tvinn.sad.import.header.error.rule.eftaCountriesAngType=Ved EFTA-land i 15.Afsendelsesland skal 1.1.Angivelsestyp=EU angives
@@ -387,6 +389,7 @@ systema.tvinn.sad.export.header.error.rule.avsLandNotNorwayAndBestLandNorway=Ved
 systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueMandatory=Avgifter S/K/I er obligatorisk dersom systemet IKKE finner tollkreditt (48.Kontonr.Tollkredit)
 systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueDiscreteMandatoryValues=Avgifter S/I er obligatorisk dersom systemet FINNER tollkreditt (48.Kontonr.Tollkredit)
 systema.tvinn.sad.export.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
+systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil for den valgte 1.Dekl.type (EU eller IM)
 
 #----------------------------------------------
 #TVINN-SAD EXPORT ERRORS - Finans.Opplysninger
