Update - Isola change request

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -322,7 +322,8 @@ systema.tvinn.sad.export.list.search.label.vikt=Vekt
 systema.tvinn.sad.export.list.search.label.godsnr=Godsnr.
 systema.tvinn.sad.export.list.search.label.kopieraArende=Kopiere
 systema.tvinn.sad.export.list.search.label.notisblock=Not.blokk
-systema.tvinn.sad.export.list.search.label.innstikk=Inst
+systema.tvinn.sad.export.list.search.label.innstikk=Innstikk
+systema.tvinn.sad.export.list.search.label.faknr=Fakt.nr.
 
 #------------------------------------------
 #TVINN-SAD Export Item list column labels
