Update - etablering Manifest on TVINN

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -11,6 +11,7 @@ systema.tvinn.sad.ncts.import.label=NCTS Import
 systema.tvinn.sad.ncts.import.createnew=Lage ny
 systema.tvinn.sad.change.password.label=Endre passord
 systema.tvinn.sad.admin.label=Admin
+systema.tvinn.sad.manifest.label=Manifest
 systema.tvinn.sad.maintenance.label=Vedlikehold
 systema.tvinn.sad.maintenance.felles.label=Felles Opplysn.
 systema.tvinn.sad.main.gate.returnTo.label=Hovedmeny for TVINN
@@ -27,6 +28,12 @@ systema.tvinn.sad.submit.not.editable=Ikke oppdaterbar
 systema.tvinn.sad.search=Søk
 systema.tvinn.sad.cancel=Avbryt
 systema.tvinn.sad.ok=Ok
+systema.tvinn.sad.close=Lukk
+systema.tvinn.sad.createnew=Lage ny
+systema.tvinn.sad.save=Lagre
+systema.tvinn.sad.send=Send
+systema.tvinn.sad.update=Endre
+
 
 #-----------
 #NOTISBLOCK
@@ -746,7 +753,17 @@ systema.tvinn.sad.admin.sadexport.list.search.label.status=St.
 systema.tvinn.sad.admin.transport.list.error.null.avdOrSign=Avdeling eller signatur er obligatorisk
 
 
-
-
+#------------------------
+#TVINN-SAD MANIFEST
+#------------------------
+systema.tvinn.sad.manifest.list.tab=Liste
+systema.tvinn.sad.manifest.list.search.label.avd=Avd.
+systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
+systema.tvinn.sad.manifest.list.search.label.signatur=Signatur
+systema.tvinn.sad.manifest.list.search.label.datum=Dato
+systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Dato
+systema.tvinn.sad.manifest.list.search.label.tdatum=Til Dato
+systema.tvinn.sad.manifest.created.header.tab=Transport
+systema.tvinn.sad.manifest.createnew.last.tab=Last
 
 
