Update - Martin Bencher SAD-Eksport (17. Best.land Validator mot EU/EX

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -397,7 +397,8 @@ systema.tvinn.sad.export.header.error.rule.avsLandNotNorwayAndBestLandNorway=Ved
 systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueMandatory=Avgifter S/K/I er obligatorisk dersom systemet IKKE finner tollkreditt (48.Kontonr.Tollkredit)
 systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueDiscreteMandatoryValues=Avgifter S/I er obligatorisk dersom systemet FINNER tollkreditt (48.Kontonr.Tollkredit)
 systema.tvinn.sad.export.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
-systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil for den valgte 1.Dekl.type (EU eller IM)
+systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil. Avs.land må alltid være NO.
+systema.tvinn.sad.export.header.error.rule.selkb.invalidCountryDeklType=17.Best.land er feil for den valgte 1.Dekl.type (EU eller EX)
 
 #----------------------------------------------
 #TVINN-SAD EXPORT ERRORS - Finans.Opplysninger
