Update - TVINN SAD - DocRef on list (NCTS Eksport)

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -447,6 +447,7 @@ systema.tvinn.sad.ncts.export.list.search.label.mrnNr=MRN-nr
 systema.tvinn.sad.ncts.export.list.search.label.status=St.
 systema.tvinn.sad.ncts.export.list.search.label.mottagare=Mottaker
 systema.tvinn.sad.ncts.export.list.search.label.bruttovikt=B.vekt
+systema.tvinn.sad.ncts.export.list.search.label.docRef=Dok.ref.
 systema.tvinn.sad.ncts.export.list.search.label.kolli=Kolli
 systema.tvinn.sad.ncts.export.list.search.label.forenkladforfarande=T
 systema.tvinn.sad.ncts.export.list.search.label.list=L
