--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -123,7 +123,10 @@ systema.tvinn.sad.import.list.search.label.mottagare=Mottaker
 systema.tvinn.sad.import.list.search.label.vikt=Vekt
 systema.tvinn.sad.import.list.search.label.godsnr=Godsnr.
 systema.tvinn.sad.import.list.search.label.innstikk=Inst
+systema.tvinn.sad.import.list.search.label.faknr=Faktura
+systema.tvinn.sad.import.list.search.label.r31=R31
 systema.tvinn.sad.import.list.search.label.notisblock=Not.blokk
+
 
 #systema.tvinn.sad.import.list.search.label.begaranOmKlarering=Klarera
 systema.tvinn.sad.import.list.search.label.kopieraArende=Kopiere
@@ -330,7 +333,9 @@ systema.tvinn.sad.export.list.search.label.godsnr=Godsnr.
 systema.tvinn.sad.export.list.search.label.kopieraArende=Kopiere
 systema.tvinn.sad.export.list.search.label.notisblock=Not.blokk
 systema.tvinn.sad.export.list.search.label.innstikk=Innstikk
-systema.tvinn.sad.export.list.search.label.faknr=Fakt.nr.
+systema.tvinn.sad.export.list.search.label.faknr=Faktura
+systema.tvinn.sad.export.list.search.label.r31=R31
+
 
 #------------------------------------------
 #TVINN-SAD Export Item list column labels
