Update - SAD export - EUR.1

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -310,6 +310,10 @@ systema.tvinn.sad.export.archive.list.label.date=Dato
 systema.tvinn.sad.export.archive.list.label.time=Tid
 systema.tvinn.sad.export.archive.list.label.subject=Tema
 systema.tvinn.sad.export.archive.list.label.additionalInfo=Ekstrainfo.
+#--------------------------------------
+#TVINN-SAD Export EUR - Varesertifikat
+#--------------------------------------
+systema.tvinn.sad.export.eur.tab=EUR.1
 
 #--------------------------------
 #TVINN-SAD Export Angivelse - översikt
