Update DHL - fiskavgift + CW1 signatur validation

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -408,6 +408,7 @@ systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueDiscreteMandatoryVa
 systema.tvinn.sad.export.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
 systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil. Avs.land må alltid være NO.
 systema.tvinn.sad.export.header.error.rule.selkb.invalidCountryDeklType=17.Best.land er feil for den valgte 1.Dekl.type (EU eller EX)
+systema.tvinn.sad.export.header.error.rule.invalid.sesg=Signatur er ugyldig.
 
 #----------------------------------------------
 #TVINN-SAD EXPORT ERRORS - Finans.Opplysninger
