--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -403,8 +403,9 @@ systema.tvinn.sad.export.header.error.null.om_seft01.ombArsak=31.Årsak er obliga
 #TVINN-SAD EXPORT HEADER rule errors
 #------------------------------------
 systema.tvinn.sad.export.header.error.rule.avsLandNotNorwayAndBestLandNorway=Ved pros. (Eksped.type) [2, 4, 18, 81, 90] må 15.Avs.land være ULIK "NO" og 17.Best.land MÅ være "NO"
-systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueMandatory=Avgifter S/K/I er obligatorisk dersom systemet IKKE finner tollkreditt (48.Kontonr.Tollkredit)
+systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueMandatory=Avgifter S/K/I er obligatorisk dersom systemet IKKE finner tollkreditt (48.Kontonr.Tollkredit) eller tollkreditt = 0
 systema.tvinn.sad.export.header.error.rule.seski.tollMvaValueDiscreteMandatoryValues=Avgifter S/I er obligatorisk dersom systemet FINNER tollkreditt (48.Kontonr.Tollkredit)
+systema.tvinn.sad.export.header.error.rule.sekddk.tollMvaValueMandatory=Dagsopp./Kontant er obligatorisk dersom systemet IKKE finner tollkreditt (48.Kontonr.Tollkredit) eller tollkreditt = 0
 systema.tvinn.sad.export.header.error.rule.invalidFaktDate=28. Fakt.dato er feil
 systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil. Avs.land må alltid være NO.
 systema.tvinn.sad.export.header.error.rule.selkb.invalidCountryDeklType=17.Best.land er feil for den valgte 1.Dekl.type (EU eller EX)
