Update - SAD Import - Faktsum vs Kostnader (såsom SAD Eksport)

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -252,6 +252,7 @@ systema.tvinn.sad.import.header.error.rule.item.TnAndPreferenseNotAllowed=Kombin
 systema.tvinn.sad.import.header.error.rule.item.svntm.extraMangd.mustExist=Mengde er obligatorisk.
 systema.tvinn.sad.import.header.error.rule.item.svntm.extraMangd.mustNotExist=Mengde skal ikke angis for denne Varenr.
 systema.tvinn.sad.import.header.error.rule.item.wg1.avgifter.mustExist=Avgifter må angis for denne Varenr.
+systema.tvinn.sad.import.header.error.rule.invalid.sebel2=12.Verdiopplysninger - Beløp andre kost: må være mindre enn 22.Fakturasum
 
 #----------------
 #TVINN-SAD EXPORT 
