Update - regex on containernr - validation

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -34,6 +34,7 @@ systema.tvinn.sad.save=Lagre
 systema.tvinn.sad.send=Send
 systema.tvinn.sad.update=Endre
 
+systema.tvinn.sad.general.error.rule.item.svcnr.containernr.invalid=Containernr er ugyldig. Format: AAAA1234568 
 
 #-----------
 #NOTISBLOCK
