--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -341,6 +341,14 @@ systema.tvinn.sad.export.list.search.label.notisblock=Not.blokk
 systema.tvinn.sad.export.list.search.label.innstikk=Innstikk
 systema.tvinn.sad.export.list.search.label.faknr=Faktura
 systema.tvinn.sad.export.list.search.label.r31=R31
+systema.tvinn.sad.export.list.search.label.email=Epost
+
+systema.tvinn.sad.export.list.search.label.omber.omber=Omber
+systema.tvinn.sad.export.list.search.label.omber.status=St.
+systema.tvinn.sad.export.list.search.label.omber.datum=Dato
+systema.tvinn.sad.export.list.search.label.omber.lopenr=Løpenr
+
+
 
 
 #------------------------------------------
