SadImport - Excel on main list

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -127,6 +127,12 @@ systema.tvinn.sad.import.list.search.label.innstikk=Inst
 systema.tvinn.sad.import.list.search.label.faknr=Faktura
 systema.tvinn.sad.import.list.search.label.r31=R31
 systema.tvinn.sad.import.list.search.label.notisblock=Not.blokk
+systema.tvinn.sad.import.list.search.label.email=Epost
+
+systema.tvinn.sad.import.list.search.label.omber.omber=Omber
+systema.tvinn.sad.import.list.search.label.omber.status=St.
+systema.tvinn.sad.import.list.search.label.omber.datum=Dato
+systema.tvinn.sad.import.list.search.label.omber.lopenr=Løpenr
 
 
 #systema.tvinn.sad.import.list.search.label.begaranOmKlarering=Klarera
