Rubrik 36 SAD Eksport - Item lines

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -367,6 +367,7 @@ systema.tvinn.sad.export.item.list.label.svfyl.fk=FK
 systema.tvinn.sad.export.item.list.label.svvnt.vareNr=Varenr.
 systema.tvinn.sad.export.item.list.label.svvktn.nettov=Nett.vekt
 systema.tvinn.sad.export.item.list.label.svntm.mengde=Mengde
+systema.tvinn.sad.export.item.list.label.svpre.preference=Pref.
 systema.tvinn.sad.export.item.list.label.svbelt.varansPris=Tollverdi
 systema.tvinn.sad.export.item.list.label.svavt.ff=FF
 systema.tvinn.sad.export.item.list.label.svavtp.tollsats=Sats
@@ -457,7 +458,7 @@ systema.tvinn.sad.export.header.error.rule.item.svntm.extraMangd.mustExist=Mengd
 systema.tvinn.sad.export.header.error.rule.item.svntm.extraMangd.mustNotExist=Mengde skal ikke angis for denne Varenr.
 systema.tvinn.sad.export.header.error.rule.item.svlk.landkodOppr.mustNotExist=Ved fylkeskode ulik 91 skal ikke Landk.Oppr. fylles ut
 systema.tvinn.sad.export.header.error.rule.item.svavt.fiskeavgift.mustExist=Fiskeavgift (FF,Sats og Sekv.) må angis for denne Varenr.
-
+systema.tvinn.sad.export.header.error.rule.item.tilleggsoppl.preferanse.wf1=36.Preferense error if not "N" or empty: Dersom opprinnelsesbeviset er et opprinnelsessertifikat skal det anføres «SER»(rubrik 44a - Tilleggsoppl-Ref.) og sertifikatets nummer(rubrik 44a. Tilleggsoppl). Dersom opprinnelsesbeviset er en faktura/opprinnelseserklæring skal det anføres «SER» og autorisasjonsnummeret eller; dersom eksportøren ikke er godkjent eksportør anføres «SER» og opprinnelseserklæring.
 #------------------------------------
 # TVINN-SAD-NCTS Export Oppd. - översikt
 #------------------------------------
