Update - SAD Import ETA-Implementation HEADER

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -123,11 +123,12 @@ systema.tvinn.sad.import.list.search.label.avsandare=Avsender
 systema.tvinn.sad.import.list.search.label.mottagare=Mottaker
 systema.tvinn.sad.import.list.search.label.vikt=Vekt
 systema.tvinn.sad.import.list.search.label.godsnr=Godsnr.
-systema.tvinn.sad.import.list.search.label.innstikk=Inst
+systema.tvinn.sad.import.list.search.label.innstikk=In
 systema.tvinn.sad.import.list.search.label.faknr=Faktura
 systema.tvinn.sad.import.list.search.label.r31=R31
+systema.tvinn.sad.import.list.search.label.eta=ETA
 systema.tvinn.sad.import.list.search.label.notisblock=Not.blokk
-systema.tvinn.sad.import.list.search.label.email=Epost
+systema.tvinn.sad.import.list.search.label.email=Ep
 
 systema.tvinn.sad.import.list.search.label.omber.omber=Omber
 systema.tvinn.sad.import.list.search.label.omber.status=St.
@@ -212,7 +213,8 @@ systema.tvinn.sad.import.header.error.null.siktc=48.Kontonr.Tollkredit er obliga
 #------------------------------------
 systema.tvinn.sad.import.header.error.rule.tollkreditOrDagsopp=Dagsopp./Kontanter skal ikke utfyldes hvis 48.Kontonr.Tollkredit eksisterer.
 systema.tvinn.sad.import.header.error.rule.invalidFrakt=Tastet 12.Verdiopplysninger-Beløp tollb.frakt: er ugyldig i henhold til leveringsbetingelse 20.1 Leveringksvilkår kode.
-systema.tvinn.sad.import.header.error.rule.invalidDeklGodkantDate=Dekl.godkj.dato 
+systema.tvinn.sad.import.header.error.rule.invalidDeklGodkantDate=Dekl.godkj.dato er feil
+systema.tvinn.sad.import.header.error.rule.invalidETADate=ETA.dato er feil (minst 10 chars: ddMMyyHHmm)
 systema.tvinn.sad.import.header.error.rule.invalidFaktDate=28.Fakt.dato er feil
 systema.tvinn.sad.import.header.error.rule.invalidCountryDeklType=15.Avs./utf.land er feil for den valgte Dekl.type (EU eller IM)
 
