Update - Specific Manifest render

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -792,10 +792,11 @@ systema.tvinn.sad.admin.transport.list.error.null.avdOrSign=Avdeling eller signa
 systema.tvinn.sad.manifest.list.tab=Liste
 systema.tvinn.sad.manifest.list.search.label.avd=Avd.
 systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
+systema.tvinn.sad.manifest.list.search.label.turnr=Turnr
 systema.tvinn.sad.manifest.list.search.label.signatur=Signatur
 systema.tvinn.sad.manifest.list.search.label.datum=Dato
-systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Dato
-systema.tvinn.sad.manifest.list.search.label.tdatum=Til Dato
+systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Reg.dato
+systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
 
