Update - Pick released cargo lines

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -11,7 +11,7 @@ systema.tvinn.sad.ncts.import.label=NCTS Import
 systema.tvinn.sad.ncts.import.createnew=Lage ny
 systema.tvinn.sad.change.password.label=Endre passord
 systema.tvinn.sad.admin.label=Admin
-systema.tvinn.sad.manifest.label=Manifest
+systema.tvinn.sad.manifest.label=Ekspressfortolling
 systema.tvinn.sad.maintenance.label=Vedlikehold
 systema.tvinn.sad.maintenance.felles.label=Felles Opplysn.
 systema.tvinn.sad.main.gate.returnTo.label=Hovedmeny for TVINN
@@ -789,7 +789,7 @@ systema.tvinn.sad.admin.transport.list.error.null.avdOrSign=Avdeling eller signa
 #------------------------
 #TVINN-SAD MANIFEST
 #------------------------
-systema.tvinn.sad.manifest.list.tab=Liste
+systema.tvinn.sad.manifest.list.tab=Manifester
 systema.tvinn.sad.manifest.list.search.label.avd=Avd.
 systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
 systema.tvinn.sad.manifest.list.search.label.turnr=Turnr
