Update on Status efst vs efst2 vs clst

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -459,6 +459,7 @@ systema.tvinn.sad.export.header.error.rule.item.netWeightTooBig=Nettovekt må vær
 systema.tvinn.sad.export.header.error.rule.item.svntm.extraMangd.mustExist=Mengde er obligatorisk.
 systema.tvinn.sad.export.header.error.rule.item.svntm.extraMangd.mustNotExist=Mengde skal ikke angis for denne Varenr.
 systema.tvinn.sad.export.header.error.rule.item.svlk.landkodOppr.mustNotExist=Ved fylkeskode ulik 91 skal ikke Landk.Oppr. fylles ut
+systema.tvinn.sad.export.header.error.rule.item.svlk.landkodOppr.mustExist=Ved fylkeskode 91 skal Landk.Oppr. fylles ut
 systema.tvinn.sad.export.header.error.rule.item.svavt.fiskeavgift.mustExist=Fiskeavgift (FF,Sats og Sekv.) må angis for denne Varenr.
 systema.tvinn.sad.export.header.error.rule.item.tilleggsoppl.preferanse.wf1=36.Preferense error if not "N" or empty: Dersom opprinnelsesbeviset er et opprinnelsessertifikat skal det anføres «SER»(rubrik 44a - Tilleggsoppl-Ref.) og sertifikatets nummer(rubrik 44a. Tilleggsoppl). Dersom opprinnelsesbeviset er en faktura/opprinnelseserklæring skal det anføres «SER» og autorisasjonsnummeret eller; dersom eksportøren ikke er godkjent eksportør anføres «SER» og opprinnelseserklæring.
 #------------------------------------
