Update - Validation on Header

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -800,5 +800,7 @@ systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Reg.dato
 systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
-
+#Manifest header
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
+systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
 
