--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -803,4 +803,4 @@ systema.tvinn.sad.manifest.createnew.last.tab=Last
 #Manifest header
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
-
+systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
