Update - cargo lines - Oppnr TELLGE och diverse

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -805,6 +805,7 @@ systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyld
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. Minst 4 sifre
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være fremover i tide
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 1 timme frem (idag)
-
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
+#Manifest cargo lines
+systema.tvinn.sad.manifest.express.cargolines.error.rule.invalidDeklDate=Dato er ugyldig
