Update after test stage on toll.no /YBC/OT

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -804,8 +804,13 @@ systema.tvinn.sad.manifest.createnew.last.tab=Last
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. Minst 4 sifre
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være fremover i tide
-systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 1 timme frem (idag)
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 2-timmer frem (idag)
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
 #Manifest cargo lines
 systema.tvinn.sad.manifest.express.cargolines.error.rule.invalidDeklDate=Dato er ugyldig
+systema.tvinn.sad.manifest.express.cargolines.error.rule.directfortolling.mandatory.ids=Deklarantnr,Dato og Sekvens er obligatoriske vid Prsedyre=01
+systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.mandatory.ids=MRNnr,Avsender og Mottager er obligatoriske vid Prosedyre=02 (Transit)
+
+
+
