Update - on none editable status overall

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -811,6 +811,6 @@ systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsda
 systema.tvinn.sad.manifest.express.cargolines.error.rule.invalidDeklDate=Dato er ugyldig
 systema.tvinn.sad.manifest.express.cargolines.error.rule.directfortolling.mandatory.ids=Deklarantnr,Dato og Sekvens er obligatoriske vid Prsedyre=01
 systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.mandatory.ids=MRNnr,Avsender og Mottager er obligatoriske vid Prosedyre=02 (Transit)
-
+systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.certified.invalid=Sertifisert er ugyldig. Kan ikke være = JA i transitt.
 
 
