--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -790,12 +790,17 @@ systema.tvinn.sad.admin.transport.list.error.null.avdOrSign=Avdeling eller signa
 #------------------------
 #TVINN-SAD MANIFEST
 #------------------------
+#general
+systema.tvinn.sad.manifest.disabled.button=Skrivebeskyttet
+
 systema.tvinn.sad.manifest.list.tab=Manifester
 systema.tvinn.sad.manifest.list.search.label.avd=Avd.
 systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
 systema.tvinn.sad.manifest.list.search.label.turnr=Turnr
 systema.tvinn.sad.manifest.list.search.label.signatur=Signatur
 systema.tvinn.sad.manifest.list.search.label.datum=Dato
+systema.tvinn.sad.manifest.list.search.label.etafdatum=Fra ETA dato
+systema.tvinn.sad.manifest.list.search.label.etatdatum=Til ETA dato
 systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Reg.dato
 systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
