DHL - Omberegning - change on SEND SAD export - support case

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -430,6 +430,8 @@ systema.tvinn.sad.export.header.error.rule.invalidCountryDeklType=15.Avs./utf.la
 systema.tvinn.sad.export.header.error.rule.selkb.invalidCountryDeklType=17.Best.land er feil for den valgte 1.Dekl.type (EU eller EX)
 systema.tvinn.sad.export.header.error.rule.invalid.sesg=Signatur er ugyldig.
 systema.tvinn.sad.export.header.error.rule.invalid.sebel2=12.Verdiopplysninger - Beløp andre kost: må være mindre enn 22.Fakturasum
+systema.tvinn.sad.export.header.error.rule.invalid.seftg2=12.Verdiopplysninger - Blank på fortegn (P/M) skal ikke godtas så lenger Beløp andre kost. er oppgitt.
+
 
 #----------------------------------------------
 #TVINN-SAD EXPORT ERRORS - Finans.Opplysninger
