--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -808,6 +808,7 @@ systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
 #Manifest header
+systema.tvinn.sad.manifest.express.header.error.null.orgnr=Org.nr er obligatorisk. Sjekk SADEFDEF - Avd.vedlikehold ekspressfortolling.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. Minst 4 sifre
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være fremover i tide
