ETA validation correction - TOTEN

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -811,7 +811,7 @@ systema.tvinn.sad.manifest.createnew.last.tab=Last
 systema.tvinn.sad.manifest.express.header.error.null.orgnr=Org.nr er obligatorisk. Sjekk SADEFDEF - Avd.vedlikehold ekspressfortolling.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. Minst 4 sifre
-systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være fremover i tide
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være frem i tid
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 2-timmer frem (idag)
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
