--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -807,6 +807,7 @@ systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Reg.dato
 systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
+systema.tvinn.sad.manifest.created.header.logging.tab=EDI-logg
 #Manifest header
 systema.tvinn.sad.manifest.express.header.error.null.orgnr=Org.nr er obligatorisk. Sjekk SADEFDEF - Avd.vedlikehold ekspressfortolling.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
