--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -818,7 +818,7 @@ systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødse
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
 #Manifest cargo lines
 systema.tvinn.sad.manifest.express.cargolines.error.rule.invalidDeklDate=Dato er ugyldig
-systema.tvinn.sad.manifest.express.cargolines.error.rule.directfortolling.mandatory.ids=Deklarantnr,Dato og Sekvens er obligatoriske vid Prsedyre=01
+systema.tvinn.sad.manifest.express.cargolines.error.rule.directfortolling.mandatory.ids=Deklarantnr,Dato, Sekvens, Eksporttype og Eksp.id er obligatoriske vid Prsedyre=01 (Direktefortolling)
 systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.mandatory.ids=MRNnr,Avsender og Mottager er obligatoriske vid Prosedyre=02 (Transit)
 systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.certified.invalid=Sertifisert er ugyldig. Kan ikke være = JA i transitt.
 
