Update for Valid Transp.means

--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -431,6 +431,7 @@ systema.tvinn.sad.export.header.error.rule.selkb.invalidCountryDeklType=17.Best.
 systema.tvinn.sad.export.header.error.rule.invalid.sesg=Signatur er ugyldig.
 systema.tvinn.sad.export.header.error.rule.invalid.sebel2=12.Verdiopplysninger - Beløp andre kost: må være mindre enn 22.Fakturasum
 systema.tvinn.sad.export.header.error.rule.invalid.seftg2=12.Verdiopplysninger - Blank på fortegn (P/M) skal ikke godtas så lenger Beløp andre kost. er oppgitt.
+systema.tvinn.sad.export.header.error.rule.invalid.setrm=25.Transportmåte - er ugyldig i kombinasjon med det oppgitte 29.Utpass.sted
 
 
 #----------------------------------------------
