--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -35,6 +35,7 @@ systema.tvinn.sad.send=Send
 systema.tvinn.sad.update=Endre
 
 systema.tvinn.sad.general.error.rule.item.svcnr.containernr.invalid=Containernr er ugyldig. Format: AAAA1234568 
+systema.tvinn.sad.general.error.rule.item.svpd.prosedyre.invalid=Prosedyre er ugyldig. Første siffer i 1.2 Eksped.type (header) må være lik med første siffer i Procedyre i linjenivå. Hvis 1.2 Eksped.type (header) = Procedyre, skal Procedyre ikke oppgis. 
 
 #-----------
 #NOTISBLOCK
