--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -173,6 +173,7 @@ systema.tvinn.sad.import.header.error.null.siavd=Avdeling er obligatorisk
 systema.tvinn.sad.import.header.error.null.sisg=Signatur er obligatorisk
 systema.tvinn.sad.import.header.error.null.sidty=1.1 Dekl.Type er obligatorisk
 systema.tvinn.sad.import.header.error.null.sidp=1.2 Eksped.type er obligatorisk
+systema.tvinn.sad.import.header.error.null.sidp2=1.2 Prosedyren er obligatorisk
 #Diverse
 systema.tvinn.sad.import.header.error.null.silka=15.Avsenderland er obligatorisk
 systema.tvinn.sad.import.header.error.null.sintk=6.Antall kolli er obligatorisk
@@ -391,6 +392,8 @@ systema.tvinn.sad.export.header.error.null.seavd=Avdeling er obligatorisk
 systema.tvinn.sad.export.header.error.null.sesg=Signatur er obligatorisk
 systema.tvinn.sad.export.header.error.null.sedty=1.Dekl.Type er obligatorisk
 systema.tvinn.sad.export.header.error.null.sedp=Eksped.type er obligatorisk
+systema.tvinn.sad.export.header.error.null.sedp2=Prosedyrekod er obligatorisk
+
 #Avsender/Mottaker/Deklarant
 systema.tvinn.sad.export.header.error.null.serg=2.Avsender/Regnr er obligatorisk
 systema.tvinn.sad.export.header.error.null.senas=8.Mottaker/Navn er obligatorisk
