--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -6,8 +6,10 @@ systema.tvinn.sad.export.label=SAD-Eksport
 systema.tvinn.sad.import.label=SAD-Import
 systema.tvinn.sad.import.createnew=Lage ny
 systema.tvinn.sad.ncts.export.label=NCTS Eksport
+systema.tvinn.sad.ncts5.export.label=NCTS-5 Eksport
 systema.tvinn.sad.ncts.export.createnew=Lage ny
 systema.tvinn.sad.ncts.import.label=NCTS Import
+systema.tvinn.sad.ncts5.import.label=NCTS-5 Import
 systema.tvinn.sad.ncts.import.createnew=Lage ny
 systema.tvinn.sad.change.password.label=Endre passord
 systema.tvinn.sad.admin.label=Admin
