--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -549,7 +549,7 @@ systema.tvinn.sad.ncts.export.list.error.null.avdOrSign=Avdeling eller signatur 
 #SENDER
 systema.tvinn.sad.ncts.export.header.error.null.thnas=2.Avsender-Navn er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thtins=2.Avsender-TIN er obligatorisk
-systema.tvinn.sad.ncts.export.header.error.null.thads1=2.Avsender-Adresse er obligatorisk
+systema.tvinn.sad.ncts.export.header.error.null.thad1s=2.Avsender-Adresse er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thsks=2.Avsender-Språkkode er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thpns=2.Avsender-Postnr. er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thpss=2.Avsender-Postadresse er obligatorisk
@@ -557,7 +557,7 @@ systema.tvinn.sad.ncts.export.header.error.null.thlks=2.Avsender-Land er obligat
 #RECEIVER
 systema.tvinn.sad.ncts.export.header.error.null.thnak=8.Mottaker-Navn er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thtink=8.Mottaker-TIN er obligatorisk
-systema.tvinn.sad.ncts.export.header.error.null.thadk1=8.Mottaker-Adresse er obligatorisk
+systema.tvinn.sad.ncts.export.header.error.null.thad1k=8.Mottaker-Adresse er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thskk=8.Mottaker-Språkkode er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thpnk=8.Mottaker-Postnr. er obligatorisk
 systema.tvinn.sad.ncts.export.header.error.null.thpsk=8.Mottaker-Postadresse er obligatorisk
