--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -504,6 +504,14 @@ systema.tvinn.sad.ncts.export.created.mastertopic.tab=Oppdrag
 #-------------------------------------------
 # TVINN-SAD-NCTS Export Skapa nya varuposter
 #-------------------------------------------
+systema.tvinn.sad.ncts.export.houseconsignment.createnew.tab=House consignment
+systema.tvinn.sad.ncts.export.houseconsignment.createnew.submit=Lagre
+systema.tvinn.sad.ncts.export.houseconsignment.createnew=Lage Ny
+
+
+#-------------------------------------------
+# TVINN-SAD-NCTS Export Skapa nya varuposter
+#-------------------------------------------
 systema.tvinn.sad.ncts.export.item.created.mastertopic.tab=Oppdrag 
 systema.tvinn.sad.ncts.export.item.createnew.tab=Varelinjer
 systema.tvinn.sad.ncts.export.item.createnew.submit=Lagre
