--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -504,7 +504,7 @@ systema.tvinn.sad.ncts.export.created.mastertopic.tab=Oppdrag
 #-------------------------------------------
 # TVINN-SAD-NCTS Export Skapa nya varuposter
 #-------------------------------------------
-systema.tvinn.sad.ncts.export.houseconsignment.createnew.tab=House consignment
+systema.tvinn.sad.ncts.export.houseconsignment.createnew.tab=House Consignment
 systema.tvinn.sad.ncts.export.houseconsignment.createnew.submit=Lagre
 systema.tvinn.sad.ncts.export.houseconsignment.createnew=Lage Ny
 
