--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -639,6 +639,11 @@ systema.tvinn.sad.ncts.export.header.error.rule.item.tvtdn2.mustExist=Oppdrag re
 systema.tvinn.sad.ncts.export.koderegister.search.mandatoryFields=Når Tollsted referansenr er valgt, må minst ett tegn søkes, i Kode eller Beskrivelse(norsk).
 
 
+#---------------------------------------------------
+# TVINN-SAD-NCTS5 EXPORT ERRORS - House Consignment
+#---------------------------------------------------
+systema.tvinn.sad.ncts5.export.house.consignment.error.null.tcavd=Avdelning er obligatorisk.
+
 #------------------------------------
 #TVINN-SAD-NCTS Import Ärenden - översikt
 #------------------------------------
