--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -643,6 +643,7 @@ systema.tvinn.sad.ncts.export.koderegister.search.mandatoryFields=Når Tollsted r
 # TVINN-SAD-NCTS5 EXPORT ERRORS - House Consignment
 #---------------------------------------------------
 systema.tvinn.sad.ncts5.export.house.consignment.error.null.tcavd=Avdelning er obligatorisk.
+systema.tvinn.sad.ncts5.export.house.consignment.error.null.tcvktb=Bruttovekt er obligatorisk.
 
 #------------------------------------
 #TVINN-SAD-NCTS Import Ärenden - översikt
