--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -832,7 +832,8 @@ systema.tvinn.sad.manifest.created.header.logging.tab=EDI-logg
 #Manifest header
 systema.tvinn.sad.manifest.express.header.error.null.orgnr=Org.nr er obligatorisk. Sjekk SADEFDEF - Avd.vedlikehold ekspressfortolling.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
-systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. Minst 4 sifre
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. HHmm
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeRegEx=ETA tid er ugyldig.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være frem i tid
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 2-timmer frem (idag)
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
