--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -844,4 +844,13 @@ systema.tvinn.sad.manifest.express.cargolines.error.rule.directfortolling.mandat
 systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.mandatory.ids=MRNnr,Avsender og Mottager er obligatoriske vid Prosedyre=02 (Transit)
 systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.certified.invalid=Sertifisert er ugyldig. Kan ikke være = JA i transitt.
 
+#------------------------
+#TVINN-SAD DIGITOLL
+#------------------------
+#general
+systema.tvinn.sad.digitoll.disabled.button=Skrivebeskyttet
+
+systema.tvinn.sad.digitoll.list.tab.master=Tur - Master
+systema.tvinn.sad.digitoll.list.tab.house=Opd - House
+systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
 
