--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -853,4 +853,8 @@ systema.tvinn.sad.digitoll.disabled.button=Skrivebeskyttet
 systema.tvinn.sad.digitoll.list.tab.master=Tur - Master
 systema.tvinn.sad.digitoll.list.tab.house=Opd - House
 systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
+#House validator
+systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
+systema.tvinn.sad.digitoll.house.error.rule.notrequired.deklDateSekv=Prosedyr TRANSIT kan ikke inneholde Deklarantnr./Dato/Sekvensnr.
+systema.tvinn.sad.digitoll.house.error.rule.notrequired.mrn=Prosedyr IMMEDIATE kan ikke inneholde MRN/LRN
 
