--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -836,6 +836,14 @@ systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er u
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeRegEx=ETA tid er ugyldig.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være frem i tid
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 2-timmer frem (idag)
+
+systema.tvinn.sad.manifest.express.header.error.rule.invalidStaDate=STA er ugyldig
+systema.tvinn.sad.manifest.express.header.error.rule.invalidStaTime=STA tid er ugyldig. HHmm
+systema.tvinn.sad.manifest.express.header.error.rule.invalidStaTimeRegEx=STA tid er ugyldig.
+systema.tvinn.sad.manifest.express.header.error.rule.invalidStaDateForward=STA må være frem i tid
+systema.tvinn.sad.manifest.express.header.error.rule.invalidStaTimeForward=STA tid er ugyldig. Minst 2-timmer frem (idag)
+
+
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriverBirthday=Fødselsdato er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidDriversAge=Fødselsdato er ugyldig. Sjåføren er for ung (under 18?)
 #Manifest cargo lines
@@ -853,6 +861,8 @@ systema.tvinn.sad.digitoll.disabled.button=Skrivebeskyttet
 systema.tvinn.sad.digitoll.list.tab.master=Tur - Master
 systema.tvinn.sad.digitoll.list.tab.house=Opd - House
 systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
+#Transport validator
+systema.tvinn.sad.digitoll.transport.error.rule.required.ScheduleDates=Hvis IATA-nummeret er spesifisert, er STA-feltene obligatoriske (Schedule-time). For fly er dette rutetid for ankomst (tilsvarer SIBT hos Avinor) og brukes til å identifisere transportmiddelet.
 #House validator
 systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.deklDateSekv=Prosedyr TRANSIT kan ikke inneholde Deklarantnr./Dato/Sekvensnr.
